Work in progress This refer to #1937